--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<ol>
+		<li data-ns-test="shoppingList">car</li>
+		<li data-ns-test="shoppingList">bike</li>
+		<li data-ns-test="shoppingList">house</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Sri Lanka</li>
+		<li data-ns-test="holidayList">Bangkok</li>
+		<li data-ns-test="holidayList">vietnem</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
